--- a/EE3206_WPF/Pages/AdminDashBoard/AdminDashBoard.xaml
+++ b/EE3206_WPF/Pages/AdminDashBoard/AdminDashBoard.xaml
@@ -81,7 +81,7 @@
             </components:LandingPageButton.IconTitle>
         </components:LandingPageButton>
 
-        <components:LandingPageButton  NavUri="/Page/testpage/Page1.xaml" Grid.Row="1" Grid.Column="1">
+        <components:LandingPageButton  NavClick="NavClick_User"  NavUri="/Pages/UserOrders/UserOrders.xaml" Grid.Row="1" Grid.Column="1">
             <components:LandingPageButton.Icon>
                 <Path Fill="White" Height="80" Width="80" Data="{StaticResource delivery}"/>
             </components:LandingPageButton.Icon>
@@ -103,13 +103,13 @@
             </components:LandingPageButton.IconTitle>
         </components:LandingPageButton>
 
-        <components:LandingPageButton  NavClick="NavClick_User" Grid.Row="1" Grid.Column="3">
+        <components:LandingPageButton  NavClick="LandingPageButton_NavClick" Grid.Row="1" Grid.Column="3">
             <components:LandingPageButton.Icon>
                 <Path Fill="White" Height="80" Width="80" Data="{StaticResource logout}"/>
             </components:LandingPageButton.Icon>
             <components:LandingPageButton.IconTitle>
                 <TextBlock FontSize="32" Foreground="White" Margin="0 5 0 0" HorizontalAlignment="Center" Grid.Row="6">
-                        Home
+                        Logout
                 </TextBlock>
             </components:LandingPageButton.IconTitle>
         </components:LandingPageButton>
