--- a/EE3206_WPF/Pages/UserLogin/UserLogin.xaml
+++ b/EE3206_WPF/Pages/UserLogin/UserLogin.xaml
@@ -44,7 +44,7 @@
                     </Grid.RowDefinitions>
                     <components1:TextInput x:Name="_UserName" Grid.Row="0">
                         <components1:TextInput.Icon>
-                            <Path  Data="{StaticResource User}" Width="28"/>
+                            <Path  Data="{StaticResource Email}" Width="28"/>
                         </components1:TextInput.Icon>
                     </components1:TextInput>
 
