--- a/EE3206_WPF/Pages/AdminList/AdminList.xaml
+++ b/EE3206_WPF/Pages/AdminList/AdminList.xaml
@@ -9,7 +9,7 @@
       Title="AdminList"
       x:Name="AdminList_view"
       xmlns:components1="clr-namespace:EE3206_WPF.Components">
-    
+
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -17,12 +17,13 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Page.Resources>
-    
+
     <Grid  Background="#262537">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="400"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
+        <TextBlock Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="50,0,0,0" Text="ADMIN LIST" FontSize="72" Height="76" FontFamily="Akrobat" Width="333"/>
         <components1:BrowseBackButton BackButton="BrowseBackButton_BackButton" Margin="-101,-287,101,287"></components1:BrowseBackButton>
         <ListBox  BorderThickness="1,0,0,0" Grid.Column="1" Name="listdata" Background="Transparent">
             <ListBox.ItemTemplate>
