--- a/EE3206_WPF/Pages/UserList/UserList.xaml
+++ b/EE3206_WPF/Pages/UserList/UserList.xaml
@@ -22,6 +22,7 @@
             <ColumnDefinition Width="400"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
+        <TextBlock Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="50,0,0,0" Text="USER LIST" FontSize="72" Height="76" FontFamily="Akrobat" Width="333"/>
         <components1:BrowseBackButton BackButton="BrowseBackButton_BackButton" Margin="-101,-287,101,287"></components1:BrowseBackButton>
         <ListBox  BorderThickness="1,0,0,0" Grid.Column="1" Name="listdata" Background="Transparent">
             <ListBox.ItemTemplate>
