--- a/EE3206_WPF/Pages/UserServie/UserService.xaml
+++ b/EE3206_WPF/Pages/UserServie/UserService.xaml
@@ -14,6 +14,61 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Resources/ScrollerStyleResource.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <Style x:Key="FocusVisual">
+                <Setter Property="Control.Template">
+                    <Setter.Value>
+                        <ControlTemplate>
+                            <Rectangle Margin="2" StrokeDashArray="1 2" SnapsToDevicePixels="true" StrokeThickness="1" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
+            <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
+            <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFBEE6FD"/>
+            <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1"/>
+            <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFC4E5F6"/>
+            <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF2C628B"/>
+            <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+            <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+            <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+            <Style x:Key="ButtonStyle1" TargetType="{x:Type Button}">
+                <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+                <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+                <Setter Property="BorderThickness" Value="0"/>
+                <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                <Setter Property="VerticalContentAlignment" Value="Center"/>
+                <Setter Property="Padding" Value="1"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border CornerRadius="12" x:Name="border" Background="#A500FE" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
+                                <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsDefaulted" Value="true">
+                                    <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                                </Trigger>
+                                <Trigger Property="IsMouseOver" Value="true">
+                                    <Setter Property="Background" TargetName="border" Value="{StaticResource Button.MouseOver.Background}"/>
+                                    <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.MouseOver.Border}"/>
+                                </Trigger>
+                                <Trigger Property="IsPressed" Value="true">
+                                    <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Pressed.Background}"/>
+                                    <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Pressed.Border}"/>
+                                </Trigger>
+                                <Trigger Property="IsEnabled" Value="false">
+                                    <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                                    <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
+                                    <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
         </ResourceDictionary>
     </Page.Resources>
 
@@ -28,11 +83,11 @@
                 <ColumnDefinition Width="420"/>
                 <ColumnDefinition Width="860"/>
             </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Vertical">
+            <StackPanel Height="600" Orientation="Vertical">
                 <TextBlock Foreground="White" Margin="8,12,0,0" Text="Select Your Appoinment Day" FontFamily="Akrobat Black" FontSize="24"/>
-                <DatePicker Grid.Column="0" Margin="8,5,0,8"/>
+                <DatePicker x:Name="datevalue" Grid.Column="0" Margin="8,5,0,8"/>
                 <TextBlock  Foreground="White" Margin="8,0,8,0" Text="Select Your Appoinment Time" FontFamily="Akrobat Black" FontSize="24"/>
-                <StackPanel Orientation="Horizontal" Margin="8,0,8,0">
+                <StackPanel Orientation="Horizontal" Margin="8,8,8,0">
 
                     <Border Width="85" CornerRadius="4" Background="#A500FE">
                         <StackPanel Orientation="Horizontal">
@@ -46,21 +101,31 @@
                             <TextBlock Foreground="White" VerticalAlignment="Center" Margin="3,0,0,0" Text="MM" FontSize="22" Width="41" />
                         </StackPanel>
                     </Border>
-
                 </StackPanel>
+                <TextBlock Height="30"  Foreground="White" Margin="8,12,8,0" Text="Selected Services" FontFamily="Akrobat Black" FontSize="24"/>
+                <ListBox Height="320" Grid.Column="1" Name="selectdata" Background="Transparent" Margin="10,10,10,0">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <components1:SelectedServices SelServName="{Binding name}" SelServPrice="{Binding price}"/>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <StackPanel HorizontalAlignment="Center" Margin="12,8,12,0" Orientation="Horizontal">
+                    <Button Click="Button_Click" Margin="0,0,8,0" Style="{DynamicResource ButtonStyle1}" Foreground="White" FontSize="28" Content="Clear List" Width="180" Height="60" FontFamily="Akrobat"></Button>
+                    <Button Click="Button_Click_1" Margin="8,0,0,0" Style="{DynamicResource ButtonStyle1}" Foreground="White" FontSize="28" Content="Confirm" Width="180" Height="60" FontFamily="Akrobat"></Button>
+                </StackPanel >
             </StackPanel>
-
-
 
             <ListBox Grid.Column="1" Name="servicedata" Background="Transparent" Margin="10,10,10,0">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <components1:UserServiceList MyImageSource="{Binding Link}" ServiceName="{Binding serviceName}" ServiceDescription="{Binding description}" ServicePrice="{Binding price}" />
+                        <components1:UserServiceList AddServiceList="UserServiceList_AddServiceList" MyImageSource="{Binding Link}" ServiceName="{Binding serviceName}" ServiceDescription="{Binding description}" ServicePrice="{Binding price}" />
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
         </Grid>
         <components1:BrowseBackButton Grid.Row="2" Margin="0,3,0,4"/>
+        <components1:PopUpWindow CloseEnv="popwindow_CloseEnv"  Width="450" Height="200"  VerticalAlignment="Center" x:Name="popwindow" Margin="415,0,415,0" Grid.Row="1" />
     </Grid>
 </Page>
 
