--- a/EE3206_WPF/Components/AppoinmentListItem.xaml
+++ b/EE3206_WPF/Components/AppoinmentListItem.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="EE3206_WPF.Components.SingleOrderDetail"
+﻿<UserControl x:Class="EE3206_WPF.Components.AppoinmentListItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EE3206_WPF.Components"
-             mc:Ignorable="d" 
-             x:Name="UserOrderSingle"
-             d:DesignHeight="150" d:DesignWidth="800">
+             mc:Ignorable="d"
+             x:Name="AppoinmentData"
+              d:DesignHeight="150" d:DesignWidth="800">
     <UserControl.Resources>
         <Style x:Key="FocusVisual">
             <Setter Property="Control.Template">
@@ -26,7 +26,7 @@
         <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
         <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
         <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
-        <Style x:Key="AddButton" TargetType="{x:Type Button}">
+        <Style x:Key="DeleteButton" TargetType="{x:Type Button}">
             <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
             <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
             <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
@@ -64,55 +64,43 @@
             </Setter>
         </Style>
     </UserControl.Resources>
-    <Border Margin="0,6,0,6" Width="750" Background="#393352" CornerRadius="18">
+    <Border Margin="0,6,0,6" Width="800" Background="#393352" CornerRadius="18">
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="17*"></ColumnDefinition>
-                <ColumnDefinition Width="222*"></ColumnDefinition>
-                <ColumnDefinition Width="497*"></ColumnDefinition>
-                <ColumnDefinition Width="14*"></ColumnDefinition>
+                <ColumnDefinition Width="138*"></ColumnDefinition>
+                <ColumnDefinition Width="527*"></ColumnDefinition>
+                <ColumnDefinition Width="135*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Border CornerRadius="18" Background="WhiteSmoke" Grid.Column="1" Margin="0,4,4,4">
-                <Image  x:Name="OrderImage" Source="{Binding Path=OrderImageSource}" Margin="15,5,15,5"/>
-            </Border>
-            <Grid Grid.Column="2">
+            <Grid Grid.Column="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="2*"/>
-                    <RowDefinition/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <StackPanel VerticalAlignment="Center" Grid.Row="0" Grid.Column="0">
-                    <StackPanel Margin="20,0,20,10" Orientation="Horizontal">
-                        <TextBlock Foreground="#A500FE" VerticalAlignment="Center" Text="ORDER DETAIL ID : " FontFamily="Akrobat SemiBold" FontSize="24"/>
-                        <TextBlock VerticalAlignment="Center" Foreground="White" FontFamily="Akrobat SemiBold" FontSize="24" Width="362">
-                              <TextBlock Text="{Binding OrderDetaiID,ElementName=UserOrderSingle}"  Foreground="White"  FontFamily="Akrobat SemiBold" FontSize="24" Height="34" Width="449"/>
-                        </TextBlock>
-                    </StackPanel>
-                    <StackPanel Margin="20,0,20,0" Orientation="Horizontal">
-                        <TextBlock Foreground="#A500FE" VerticalAlignment="Center" Text="ITEM NAME : " FontFamily="Akrobat SemiBold" FontSize="24"/>
-                        <TextBlock VerticalAlignment="Center" Foreground="White" FontFamily="Akrobat SemiBold" FontSize="24" Width="362">
-                              <TextBlock Text="{Binding OrderProductName,ElementName=UserOrderSingle}"  Foreground="White"  FontFamily="Akrobat SemiBold" FontSize="24" Height="34" Width="449"/>
-                        </TextBlock>
-                    </StackPanel>
-                
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel>
+                    <TextBlock Foreground="#A500FE" Text="APPOINMENT ID" FontFamily="Akrobat SemiBold" FontSize="24"/>
+                    <TextBlock Foreground="White" Text="{Binding AppoinmentID,ElementName=AppoinmentData}" FontFamily="Akrobat SemiBold" FontSize="24"/>
                 </StackPanel>
-                <Grid Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition Width="Auto"></ColumnDefinition>
-                    </Grid.ColumnDefinitions>
-                    <StackPanel Margin="20,0,20,0" Orientation="Horizontal">
-                        <TextBlock Foreground="#A500FE" VerticalAlignment="Center" Text="PRICE : " FontFamily="Akrobat SemiBold" FontSize="24"/>
-                        <TextBlock VerticalAlignment="Center" Foreground="White" FontFamily="Akrobat SemiBold" FontSize="24" Width="362">
-                            <TextBlock Text="{Binding OrderProductPrice,ElementName=UserOrderSingle}"/>
-                            <TextBlock>.00$</TextBlock>
-                        </TextBlock>
-                    </StackPanel>
-                    <!--<Button Click="Button_Click" Foreground="White" Style="{DynamicResource AddButton}" Grid.Column="1" Width="180" Height="60" Margin="117,8,10,9" FontFamily="Akrobat SemiBold" FontSize="22">Add to Cart</Button>-->
-                </Grid>
+                <StackPanel Grid.Row="1" Grid.Column="0">
+                    <TextBlock Foreground="#A500FE" Text="APPOINMENT DATE" FontFamily="Akrobat SemiBold" FontSize="24"/>
+                    <TextBlock Foreground="White" Text="{Binding AppoinmentDate,ElementName=AppoinmentData}" FontFamily="Akrobat SemiBold" FontSize="24"/>
+                </StackPanel>
+                <StackPanel  Grid.Row="0" Grid.Column="1">
+                    <TextBlock Foreground="#A500FE" Text="USER NAME" FontFamily="Akrobat SemiBold" FontSize="24"/>
+                    <TextBlock Foreground="White" Text="{Binding AppoinmentUser,ElementName=AppoinmentData}" FontFamily="Akrobat SemiBold" FontSize="24"/>
+                </StackPanel>
+                <StackPanel  Grid.Row="1" Grid.Column="1">
+                    <TextBlock Foreground="#A500FE" Text="APPOINMENT TIME" FontFamily="Akrobat SemiBold" FontSize="24"/>
+                    <TextBlock Foreground="White" Text="{Binding AppoinmentTime,ElementName=AppoinmentData}" FontFamily="Akrobat SemiBold" FontSize="24"/>
+                </StackPanel>
             </Grid>
+            <Button  Click="Button_Click" Style="{DynamicResource DeleteButton}" Grid.Column="2" Margin="10,30,10,30">
+                <TextBlock Foreground="White" TextWrapping="Wrap" FontSize="24" HorizontalAlignment="Center" FontFamily="Akrobat SemiBold" >Servises</TextBlock>
+
+            </Button>
         </Grid>
     </Border>
 </UserControl>
-
-    
-    
