--- a/EE3206_WPF/Pages/UserServie/UserService.xaml
+++ b/EE3206_WPF/Pages/UserServie/UserService.xaml
@@ -44,7 +44,7 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Button}">
-                            <Border CornerRadius="12" x:Name="border" Background="#A500FE" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
+                            <Border CornerRadius="4" x:Name="border" Background="#A500FE" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
                                 <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                             </Border>
                             <ControlTemplate.Triggers>
@@ -87,12 +87,13 @@
                 <TextBlock Foreground="White" Margin="8,12,0,0" Text="Select Your Appoinment Day" FontFamily="Akrobat Black" FontSize="24"/>
                 <DatePicker x:Name="datevalue" Grid.Column="0" Margin="8,5,0,8"/>
                 <TextBlock  Foreground="White" Margin="8,0,8,0" Text="Select Your Appoinment Time" FontFamily="Akrobat Black" FontSize="24"/>
-                <StackPanel Orientation="Horizontal" Margin="8,8,8,0">
+                <StackPanel Orientation="Horizontal" Margin="8,8,8,0" Width="395">
 
                     <Border Width="85" CornerRadius="4" Background="#A500FE">
                         <StackPanel Orientation="Horizontal">
                             <TextBox TextAlignment="Center" x:Name="HH" FontSize="24" Width="40" FontFamily="Akrobat"/>
                             <TextBlock Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="6.5,0,0,0" Text="HH" FontSize="22" ></TextBlock>
+                           
                         </StackPanel>
                     </Border>
                     <Border Margin="20,0,0,0" Width="85" CornerRadius="4" Background="#A500FE">
@@ -101,6 +102,7 @@
                             <TextBlock Foreground="White" VerticalAlignment="Center" Margin="3,0,0,0" Text="MM" FontSize="22" Width="41" />
                         </StackPanel>
                     </Border>
+                    <Button x:Name="timebutton" Click="timebutton_Click" Margin="18,0,8,0" Style="{DynamicResource ButtonStyle1}" Foreground="White" FontSize="28" Content="AM" Width="85" Height="40" FontFamily="Akrobat"></Button>
                 </StackPanel>
                 <TextBlock Height="30"  Foreground="White" Margin="8,12,8,0" Text="Selected Services" FontFamily="Akrobat Black" FontSize="24"/>
                 <ListBox Height="320" Grid.Column="1" Name="selectdata" Background="Transparent" Margin="10,10,10,0">
