--- a/EE3206_WPF/Windows/MoreServiceWindow.xaml
+++ b/EE3206_WPF/Windows/MoreServiceWindow.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="EE3206_WPF.Windows.MoreOrderInfo"
+﻿<Window x:Class="EE3206_WPF.Windows.MoreServiceWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:EE3206_WPF.Windows" xmlns:components1="clr-namespace:EE3206_WPF.Components"
+        xmlns:local="clr-namespace:EE3206_WPF.Windows"
         mc:Ignorable="d"
-        Title="MoreOrderInfo" Height="1000" Width="850">
+        xmlns:components1="clr-namespace:EE3206_WPF.Components"
+        Title="MoreServiceWindow" Height="1000" Width="850">
     <Grid Background="#262537">
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
@@ -33,11 +34,11 @@
                 </StackPanel>
             </Grid>
         </Grid>
-        
-        <ListBox Grid.Row="3" Name="SinglorederList" Background="Transparent" Margin="10,10,10,0">
+
+        <ListBox Grid.Row="3" Name="SinglServiceList" Background="Transparent" Margin="10,10,10,0">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <components1:SingleOrderDetail OrderProductPrice="{Binding Product.price}" OrderDetaiID="{Binding ID}" OrderProductName="{Binding Product.productName}" OrderImageSource="{Binding Product.Link}"/>
+                    <components1:SingleOrderDetail OrderProductPrice="{Binding Service.price}" OrderDetaiID="{Binding ID}" OrderProductName="{Binding Service.serviceName}" OrderImageSource="{Binding Service.Link}"/>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
