--- a/EE3206_WPF/App.xaml
+++ b/EE3206_WPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:EE3206_WPF"
-             StartupUri="/Windows/CommonWindow.xaml">
+             StartupUri="/Windows/AdminWindow.xaml">
     <Application.Resources>
         <ResourceDictionary >
             <ResourceDictionary.MergedDictionaries>
