--- a/EE3206_WPF/Components/TextInput.xaml
+++ b/EE3206_WPF/Components/TextInput.xaml
@@ -74,10 +74,11 @@
 
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition  Width="251*"/>
+                    <ColumnDefinition  Width="251*"/> 
                     <ColumnDefinition Width="29*"/>
                 </Grid.ColumnDefinitions>
-                <TextBox Text="{Binding EnteredValue,ElementName=UserInput}" Margin="20 0 0 0" VerticalAlignment="Stretch" VerticalContentAlignment="Center"  FontSize="28"  Style="{DynamicResource TextBoxStyle}"></TextBox>
+                <TextBox LostFocus="value_LostFocus" Text="{Binding EnteredValue,ElementName=UserInput}" Margin="20 0 0 0" VerticalAlignment="Stretch" x:Name="value" VerticalContentAlignment="Center"  FontSize="28"  Style="{DynamicResource TextBoxStyle}"></TextBox>
+                <TextBox Foreground="Gray" GotFocus="place_GotFocus"  Text="{Binding PlaceValu,ElementName=UserInput}" Margin="20 0 0 0" VerticalAlignment="Stretch" x:Name="place" VerticalContentAlignment="Center"  FontSize="28"  Style="{DynamicResource TextBoxStyle}"></TextBox>
                 <!--<PasswordBox Margin="20 0 0 0"  FontSize="40" Style="{DynamicResource UserInputPassword}" />-->
                 <ContentControl Grid.Column="1" Content="{Binding Icon,ElementName=UserInput}"/>
                 <!--<Path Grid.Column="1"  Data="{StaticResource pass}" Width="35"/>-->
