--- a/EE3206_WPF/Pages/AdminReg/AdminReg.xaml
+++ b/EE3206_WPF/Pages/AdminReg/AdminReg.xaml
@@ -28,31 +28,31 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <TextBlock VerticalAlignment="Center" Foreground="White" FontSize="32" FontWeight="Bold" HorizontalAlignment="Center" FontFamily="Montserrat Medium">REGISTER</TextBlock>
-                <components1:TextInput x:Name="UserName"  Grid.Row="1" Height="80" Width="550">
+                <components1:TextInput PlaceValu="Name" x:Name="UserName"  Grid.Row="1" Height="80" Width="550">
                     <components1:TextInput.Icon>
                         <Path  Data="{StaticResource User}" Width="28"/>
                     </components1:TextInput.Icon>
                 </components1:TextInput>
-                <components1:TextInput x:Name="Email" Grid.Row="2" Height="80" Width="550">
+                <components1:TextInput PlaceValu="Email" x:Name="Email" Grid.Row="2" Height="80" Width="550">
                     <components1:TextInput.Icon>
                         <Path  Data="{StaticResource Email}" Width="28"/>
                     </components1:TextInput.Icon>
                 </components1:TextInput>
-                <components1:TextInput x:Name="TelephoneNum" Grid.Row="3" Height="80" Width="550">
+                <components1:TextInput PlaceValu="Telphone" x:Name="TelephoneNum" Grid.Row="3" Height="80" Width="550">
                     <components1:TextInput.Icon>
                         <Path  Data="{StaticResource Mobile}" Width="28"/>
                     </components1:TextInput.Icon>
                 </components1:TextInput>
-                <components1:TextInput x:Name="Password" Grid.Row="4" Height="80" Width="550">
-                    <components1:TextInput.Icon>
+                <components1:CustomeUserInput PlaceValuPassword="Password"  x:Name="Password" Grid.Row="4" Height="80" Width="550">
+                    <components1:CustomeUserInput.Icon>
                         <Path  Data="{StaticResource pass}" Width="28"/>
-                    </components1:TextInput.Icon>
-                </components1:TextInput>
-                <components1:TextInput x:Name="RePassword" Grid.Row="5" Height="80" Width="550">
-                    <components1:TextInput.Icon>
+                    </components1:CustomeUserInput.Icon>
+                </components1:CustomeUserInput>
+                <components1:CustomeUserInput PlaceValuPassword="Enter Password Again" x:Name="RePassword" Grid.Row="5" Height="80" Width="550">
+                    <components1:CustomeUserInput.Icon>
                         <Path  Data="{StaticResource rEenter}" Width="28"/>
-                    </components1:TextInput.Icon>
-                </components1:TextInput>
+                    </components1:CustomeUserInput.Icon>
+                </components1:CustomeUserInput>
                 <components1:RoundButton Submitclick="RoundButton_Submitclick"  Grid.Row="6" ButtonTilte="Register" Margin="0,0,0,14" />
             </Grid>
             
